<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".screen.welcome.WelcomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/whiteThree"
        android:padding="@dimen/dimens_16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_16dp"
            android:layout_marginBottom="@dimen/dimens_8dp"
            android:text="@string/text_kode_keluarga"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/size_32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_24dp"
            android:text="@string/text_ketikan_kode_keluarga_yang_ayah_bunda_miliki_disini"
            android:textSize="@dimen/size_20sp" />

        <EditText
            style="@style/PreTestCodeVerifyEditTextTheme"
            android:gravity="center"
            android:padding="@dimen/dimens_16dp"
            android:textStyle="bold"
            tools:text="AB31SJ" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_accept_tnc" />

        <Button
            style="@style/PreTestButtonPrimary"
            android:text="@string/text_masuk" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="@dimen/dimens_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimens_24dp"
            android:paddingBottom="@dimen/dimens_16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_belum_punya_kode_keluarga"
                android:textSize="@dimen/size_18sp"
                android:gravity="center"/>

            <Button
                android:layout_marginStart="@dimen/dimens_16dp"
                android:layout_marginEnd="@dimen/dimens_16dp"
                android:text="@string/text_beli_kode_keluarga_disini"
                style="@style/PreTestButtonSecondary"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>